<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".NewLevel">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        app:srcCompat="@drawable/next" />

    <TextView
        android:id="@+id/gameover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="244dp"
        android:text="@string/Next_Level"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="70dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tr"
        android:layout_width="2000dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameover"
        android:background="@drawable/btn"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/Go_Next"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:text="@string/yourscore"
        android:textColor="#F44336"
        android:textSize="33dp"
        android:textColorHint="#FFFFFF" />


</RelativeLayout>