<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">


    <ImageView
        android:id="@+id/logi"
        android:layout_width="262dp"
        android:layout_height="128dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/img"
        android:src="@drawable/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/passsword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <Button
        android:id="@+id/login"
        android:layout_width="94dp"
        android:layout_height="45dp"

        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn"

        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <Button
        android:id="@+id/sign"
        android:layout_width="97dp"
        android:layout_height="44dp"

        android:layout_marginTop="52dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/btn"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>