<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".GameOver">

    <TextView
        android:id="@+id/gameover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="244dp"
        android:text="@string/gameover"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="70dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tr"
        android:layout_width="2000dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameover"
        android:background="@drawable/btn"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/tryagain"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:text="@string/yourscore"
        android:textColor="#F44336"
        android:textColorHint="#FFFFFF"
        android:textSize="33dp"/>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="148dp"
        android:layout_height="153dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="147dp"
        android:background="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />
</androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>